[gd_scene load_steps=47 format=3 uid="uid://c0ttefhg74235"]

[ext_resource type="Shader" uid="uid://bulqso12hlwoy" path="res://shaders/stylized_sky.gdshader" id="1_4wyf3"]
[ext_resource type="Script" uid="uid://lwp8n33ajedh" path="res://scripts/movement.gd" id="2_k0juu"]
[ext_resource type="Script" uid="uid://vhbc0qwli5en" path="res://scripts/camera.gd" id="3_71j4m"]
[ext_resource type="Script" uid="uid://bsdlr7y4qtc8h" path="res://scripts/click_cast.gd" id="4_71j4m"]
[ext_resource type="Script" uid="uid://b15bcxnld5as6" path="res://scripts/button.gd" id="4_k0juu"]

[sub_resource type="Gradient" id="Gradient_qfnet"]
colors = PackedColorArray(0, 0, 0, 0, 1, 1, 1, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_i7141"]
gradient = SubResource("Gradient_qfnet")
fill = 1
fill_from = Vector2(0.5, 0.5)

[sub_resource type="Curve" id="Curve_4mrxx"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(0.371212, 1), 0.0, 0.0, 0, 0, Vector2(1, 0.707865), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveTexture" id="CurveTexture_7r4gi"]
curve = SubResource("Curve_4mrxx")

[sub_resource type="FastNoiseLite" id="FastNoiseLite_w7kh3"]

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_e3hyu"]
noise = SubResource("FastNoiseLite_w7kh3")

[sub_resource type="FastNoiseLite" id="FastNoiseLite_q5onr"]

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_jhx03"]
noise = SubResource("FastNoiseLite_q5onr")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_o8fc1"]
shader = ExtResource("1_4wyf3")
shader_parameter/cloud_shape_sampler = SubResource("NoiseTexture2D_jhx03")
shader_parameter/cloud_noise_sampler = SubResource("NoiseTexture2D_e3hyu")
shader_parameter/cloud_curves = SubResource("CurveTexture_7r4gi")
shader_parameter/clouds_samples = 16
shader_parameter/shadow_sample = 4
shader_parameter/clouds_density = 0.0
shader_parameter/clouds_scale = 1.0
shader_parameter/clouds_smoothness = 0.035
shader_parameter/clouds_light_color = Color(0, 0, 0, 1)
shader_parameter/clouds_shadow_intensity = 1.0
shader_parameter/high_clouds_density = 0.0
shader_parameter/top_color = Color(0, 0, 0, 1)
shader_parameter/bottom_color = Color(0, 0.00800001, 0.08, 1)
shader_parameter/sun_scatter = Color(0, 0, 0, 1)
shader_parameter/astro_tint = Color(0, 0, 0, 1)
shader_parameter/astro_sampler = SubResource("GradientTexture2D_i7141")
shader_parameter/astro_scale = 1.0
shader_parameter/astro_intensity = 1.0
shader_parameter/stars_intensity = 5.0
shader_parameter/shooting_stars_intensity = 0.0
shader_parameter/shooting_star_tint = Color(0, 0, 0, 1)

[sub_resource type="Sky" id="Sky_xo05s"]
sky_material = SubResource("ShaderMaterial_o8fc1")

[sub_resource type="Environment" id="Environment_dss4m"]
background_mode = 2
sky = SubResource("Sky_xo05s")
tonemap_mode = 2
glow_enabled = true
glow_bloom = 0.4
glow_blend_mode = 0

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_lakw3"]

[sub_resource type="Gradient" id="Gradient_71j4m"]
interpolation_mode = 1
offsets = PackedFloat32Array(0, 0.11039)
colors = PackedColorArray(0, 0.52549, 1, 1, 1, 1, 1, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_qfnet"]
gradient = SubResource("Gradient_71j4m")
fill = 1
fill_from = Vector2(0.5, 0.5)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_71j4m"]
albedo_color = Color(0, 0.52549, 1, 1)

[sub_resource type="SphereMesh" id="SphereMesh_qfnet"]
material = SubResource("StandardMaterial3D_71j4m")
radius = 0.05
height = 0.1

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_qfnet"]
transparency = 1
shading_mode = 0
albedo_color = Color(0.54, 0.39384, 0.2268, 0.0745098)

[sub_resource type="CylinderMesh" id="CylinderMesh_i7141"]
material = SubResource("StandardMaterial3D_qfnet")
top_radius = 0.01
bottom_radius = 0.01
height = 0.4

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_4mrxx"]
transparency = 1
shading_mode = 0
albedo_color = Color(1, 1, 1, 0.0588235)

[sub_resource type="CylinderMesh" id="CylinderMesh_7r4gi"]
material = SubResource("StandardMaterial3D_4mrxx")
top_radius = 0.03
bottom_radius = 0.03
height = 0.3

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_w7kh3"]
transparency = 1
shading_mode = 0
albedo_color = Color(1, 0, 0, 0.278431)

[sub_resource type="CylinderMesh" id="CylinderMesh_e3hyu"]
material = SubResource("StandardMaterial3D_w7kh3")
top_radius = 0.0
bottom_radius = 0.05
height = 0.15

[sub_resource type="BoxShape3D" id="BoxShape3D_qfnet"]
size = Vector3(1, 1.99109, 80.1111)

[sub_resource type="BoxShape3D" id="BoxShape3D_i7141"]
size = Vector3(86.5918, 1.99109, 0.648331)

[sub_resource type="BoxShape3D" id="BoxShape3D_4mrxx"]
size = Vector3(1.05885, 1.99109, 89.5748)

[sub_resource type="BoxShape3D" id="BoxShape3D_7r4gi"]
size = Vector3(85.4301, 1.99109, 1.61542)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_4wyf3"]
albedo_color = Color(0.2025, 0.45, 0, 1)

[sub_resource type="PlaneMesh" id="PlaneMesh_gv5m4"]
material = SubResource("StandardMaterial3D_4wyf3")
size = Vector2(100, 100)

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_7t5mc"]
points = PackedVector3Array(-50, 0, -50, -50, 0, 50, 50, 0, -50, 50, 0, 50)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_i7141"]
vertex_color_use_as_albedo = true
vertex_color_is_srgb = true
albedo_color = Color(0.71, 0.71, 0.71, 1)
metallic_specular = 0.0

[sub_resource type="CylinderMesh" id="CylinderMesh_k0juu"]
material = SubResource("StandardMaterial3D_i7141")
top_radius = 0.0
bottom_radius = 20.955
height = 25.295
radial_segments = 7

[sub_resource type="CylinderMesh" id="CylinderMesh_qfnet"]
material = SubResource("StandardMaterial3D_i7141")
top_radius = 0.0
bottom_radius = 16.409
height = 21.886
radial_segments = 7

[sub_resource type="CylinderMesh" id="CylinderMesh_4mrxx"]
material = SubResource("StandardMaterial3D_i7141")
top_radius = 0.0
bottom_radius = 12.432
height = 17.341
radial_segments = 7

[sub_resource type="BoxMesh" id="BoxMesh_4wyf3"]
size = Vector3(0.3, 1, 0.3)

[sub_resource type="BoxShape3D" id="BoxShape3D_71j4m"]
size = Vector3(0.3, 1, 0.3)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_k0juu"]
albedo_color = Color(1, 0, 0, 1)

[sub_resource type="CylinderMesh" id="CylinderMesh_71j4m"]
material = SubResource("StandardMaterial3D_k0juu")
top_radius = 0.14
bottom_radius = 0.14
height = 0.4

[sub_resource type="BoxShape3D" id="BoxShape3D_4wyf3"]
size = Vector3(0.3, 0.1, 0.3)

[sub_resource type="Animation" id="Animation_qfnet"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Button:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0.9, 0)]
}

[sub_resource type="Animation" id="Animation_4wyf3"]
resource_name = "press"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Button:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 0.9, 0), Vector3(0, 0.815385, 0), Vector3(0, 0.9, 0)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ClickBox")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.5),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"activate"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_71j4m"]
_data = {
&"RESET": SubResource("Animation_qfnet"),
&"press": SubResource("Animation_4wyf3")
}

[node name="World" type="Node3D"]

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_dss4m")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.866025, -0.433013, 0.25, 0, 0.5, 0.866025, -0.5, 0.75, -0.433013, 0, 3.73591, 0)
light_color = Color(0.29, 0.29, 0.29, 1)
shadow_enabled = true

[node name="CharacterBody3D" type="CharacterBody3D" parent="."]
collision_mask = 5
script = ExtResource("2_k0juu")

[node name="CollisionShape3D" type="CollisionShape3D" parent="CharacterBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_lakw3")

[node name="Camera3D" type="Camera3D" parent="CharacterBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0)
script = ExtResource("3_71j4m")
SENSITIVITY_X = 0.007
SENSITIVITY_Y = 0.007

[node name="RayCast3D" type="RayCast3D" parent="CharacterBody3D/Camera3D"]
target_position = Vector3(0, 0, -4)
collision_mask = 3
collide_with_areas = true
script = ExtResource("4_71j4m")

[node name="CanvasLayer" type="CanvasLayer" parent="CharacterBody3D"]
visible = false

[node name="TextureRect" type="TextureRect" parent="CharacterBody3D/CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -32.0
offset_top = -32.0
offset_right = 32.0
offset_bottom = 32.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture2D_qfnet")

[node name="SurfacePoint" type="Node3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.88448, 0, -1.21046)

[node name="Dot" type="MeshInstance3D" parent="SurfacePoint"]
visible = false
mesh = SubResource("SphereMesh_qfnet")
skeleton = NodePath("../../CharacterBody3D")

[node name="FireworkModel" type="Node3D" parent="SurfacePoint"]

[node name="Stick" type="MeshInstance3D" parent="SurfacePoint/FireworkModel"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.00872231, 0.116323, 0.00904226)
mesh = SubResource("CylinderMesh_i7141")
skeleton = NodePath("../..")

[node name="Shaft" type="MeshInstance3D" parent="SurfacePoint/FireworkModel"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.216323, 0)
mesh = SubResource("CylinderMesh_7r4gi")
skeleton = NodePath("../..")

[node name="Top" type="MeshInstance3D" parent="SurfacePoint/FireworkModel"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.405555, 0)
mesh = SubResource("CylinderMesh_e3hyu")
skeleton = NodePath("../..")

[node name="MapGeometry" type="Node3D" parent="."]

[node name="StaticBody3D" type="StaticBody3D" parent="MapGeometry"]
collision_layer = 4

[node name="CollisionShape3D" type="CollisionShape3D" parent="MapGeometry/StaticBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 39.8178, 0.970394, 0.115952)
shape = SubResource("BoxShape3D_qfnet")

[node name="StaticBody3D2" type="StaticBody3D" parent="MapGeometry"]
collision_layer = 4

[node name="CollisionShape3D" type="CollisionShape3D" parent="MapGeometry/StaticBody3D2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3.00103, 0.970394, 39.4724)
shape = SubResource("BoxShape3D_i7141")

[node name="StaticBody3D3" type="StaticBody3D" parent="MapGeometry"]
collision_layer = 4

[node name="CollisionShape3D" type="CollisionShape3D" parent="MapGeometry/StaticBody3D3"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -42.7474, 0.970394, -1.76604)
shape = SubResource("BoxShape3D_4mrxx")

[node name="StaticBody3D4" type="StaticBody3D" parent="MapGeometry"]
collision_layer = 4

[node name="CollisionShape3D" type="CollisionShape3D" parent="MapGeometry/StaticBody3D4"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.30704, 0.970394, -41.0376)
shape = SubResource("BoxShape3D_7r4gi")

[node name="Ground" type="MeshInstance3D" parent="MapGeometry"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.398754, 0, 0)
mesh = SubResource("PlaneMesh_gv5m4")
skeleton = NodePath("../..")

[node name="StaticBody3D" type="StaticBody3D" parent="MapGeometry/Ground"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="MapGeometry/Ground/StaticBody3D"]
shape = SubResource("ConvexPolygonShape3D_7t5mc")

[node name="AnchorCone2" type="MeshInstance3D" parent="MapGeometry"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 54.026, 11.522, 50.0841)
mesh = SubResource("CylinderMesh_k0juu")

[node name="AnchorCone3" type="MeshInstance3D" parent="MapGeometry"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 54.6619, 11.522, -55.9909)
mesh = SubResource("CylinderMesh_k0juu")

[node name="AnchorCone4" type="MeshInstance3D" parent="MapGeometry"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -55.9918, 11.522, -53.8922)
mesh = SubResource("CylinderMesh_k0juu")

[node name="AnchorCone22" type="MeshInstance3D" parent="MapGeometry"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -65.7529, 11.522, 25.9489)
mesh = SubResource("CylinderMesh_k0juu")

[node name="AnchorCone23" type="MeshInstance3D" parent="MapGeometry"]
transform = Transform3D(0.960697, 0, 0.2776, 0, 1, 0, -0.2776, 0, 0.960697, -9.81173, 11.522, 61.6004)
mesh = SubResource("CylinderMesh_k0juu")

[node name="AnchorCone5" type="MeshInstance3D" parent="MapGeometry"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -58.3855, 11.522, 58.0056)
mesh = SubResource("CylinderMesh_k0juu")

[node name="AnchorCone6" type="MeshInstance3D" parent="MapGeometry"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -31.5165, 9.70142, 56.7082)
mesh = SubResource("CylinderMesh_qfnet")

[node name="AnchorCone7" type="MeshInstance3D" parent="MapGeometry"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 56.2545, 9.70142, -0.718994)
mesh = SubResource("CylinderMesh_qfnet")

[node name="AnchorCone24" type="MeshInstance3D" parent="MapGeometry"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 63.3279, 9.70142, -35.7894)
mesh = SubResource("CylinderMesh_qfnet")

[node name="AnchorCone25" type="MeshInstance3D" parent="MapGeometry"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 30.8985, 9.70143, -61.6309)
mesh = SubResource("CylinderMesh_qfnet")

[node name="AnchorCone26" type="MeshInstance3D" parent="MapGeometry"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.257671, 9.70144, -61.956)
mesh = SubResource("CylinderMesh_qfnet")

[node name="AnchorCone27" type="MeshInstance3D" parent="MapGeometry"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -71.2281, 9.70143, -4.22327)
mesh = SubResource("CylinderMesh_qfnet")

[node name="AnchorCone28" type="MeshInstance3D" parent="MapGeometry"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -70.6152, 9.70143, 42.5236)
mesh = SubResource("CylinderMesh_qfnet")

[node name="AnchorCone8" type="MeshInstance3D" parent="MapGeometry"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -58.7656, 9.70142, -16.3113)
mesh = SubResource("CylinderMesh_qfnet")

[node name="AnchorCone9" type="MeshInstance3D" parent="MapGeometry"]
transform = Transform3D(0.925706, 0, -0.378245, 0, 1, 0, 0.378245, 0, 0.925706, -27.4479, 9.70142, -56.9401)
mesh = SubResource("CylinderMesh_qfnet")

[node name="AnchorCone10" type="MeshInstance3D" parent="MapGeometry"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 11.3668, 9.70142, -60.8524)
mesh = SubResource("CylinderMesh_qfnet")

[node name="AnchorCone11" type="MeshInstance3D" parent="MapGeometry"]
transform = Transform3D(0.984886, 0, -0.173201, 0, 1, 0, 0.173201, 0, 0.984886, 30.4499, 9.70142, 59.7226)
mesh = SubResource("CylinderMesh_qfnet")

[node name="AnchorCone12" type="MeshInstance3D" parent="MapGeometry"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 11.6168, 8.0087, 54.4559)
mesh = SubResource("CylinderMesh_4mrxx")

[node name="AnchorCone13" type="MeshInstance3D" parent="MapGeometry"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 56.1233, 8.0087, 14.4792)
mesh = SubResource("CylinderMesh_4mrxx")

[node name="AnchorCone14" type="MeshInstance3D" parent="MapGeometry"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 42.0628, 8.0087, 58.3073)
mesh = SubResource("CylinderMesh_4mrxx")

[node name="AnchorCone15" type="MeshInstance3D" parent="MapGeometry"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 55.6692, 7.04589, 26.8021)
mesh = SubResource("CylinderMesh_4mrxx")

[node name="AnchorCone16" type="MeshInstance3D" parent="MapGeometry"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 24.5466, 7.04589, -55.8055)
mesh = SubResource("CylinderMesh_4mrxx")

[node name="AnchorCone17" type="MeshInstance3D" parent="MapGeometry"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -9.94193, 8.51125, -59.4471)
mesh = SubResource("CylinderMesh_4mrxx")

[node name="AnchorCone18" type="MeshInstance3D" parent="MapGeometry"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 55.9337, 8.51124, -23.4837)
mesh = SubResource("CylinderMesh_4mrxx")

[node name="AnchorCone19" type="MeshInstance3D" parent="MapGeometry"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -42.6379, 8.51124, -62.6501)
mesh = SubResource("CylinderMesh_4mrxx")

[node name="AnchorCone20" type="MeshInstance3D" parent="MapGeometry"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -56.8246, 8.51124, -29.1005)
mesh = SubResource("CylinderMesh_4mrxx")

[node name="AnchorCone21" type="MeshInstance3D" parent="MapGeometry"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -56.5661, 8.00732, 3.61089)
mesh = SubResource("CylinderMesh_4mrxx")

[node name="AnchorCone29" type="MeshInstance3D" parent="MapGeometry"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -56.5661, 4.44533, 16.591)
mesh = SubResource("CylinderMesh_4mrxx")

[node name="AnchorCone30" type="MeshInstance3D" parent="MapGeometry"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 54.1575, 4.44533, -36.7125)
mesh = SubResource("CylinderMesh_4mrxx")

[node name="Button" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 0, -2)

[node name="Stand" type="MeshInstance3D" parent="Button"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
mesh = SubResource("BoxMesh_4wyf3")
skeleton = NodePath("../..")

[node name="StaticBody3D" type="StaticBody3D" parent="Button/Stand"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Button/Stand/StaticBody3D"]
shape = SubResource("BoxShape3D_71j4m")

[node name="Button" type="MeshInstance3D" parent="Button"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.9, 0)
mesh = SubResource("CylinderMesh_71j4m")

[node name="ClickBox" type="Area3D" parent="Button"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.9, 0)
collision_layer = 2
collision_mask = 0
monitoring = false
script = ExtResource("4_k0juu")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Button/ClickBox"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.148865, 0)
shape = SubResource("BoxShape3D_4wyf3")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Button"]
libraries = {
&"": SubResource("AnimationLibrary_71j4m")
}
